--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -113,3 +113,67 @@
   preview={wave-mechanics.gif},
   abbr={Vision}
 }
+
+@misc{solanki_suddenly_2018,
+	title = {Suddenly, {Statistics}?},
+	copyright = {All rights reserved},
+	shorttitle = {Suddenly, {Statistics}?},
+	url = {https://culanth.org/fieldsights/suddenly-statistics},
+	language = {en},
+	urldate = {2018-05-18},
+	journal = {Cultural Anthropology},
+	author = {Solanki, Aakash},
+	year = {2018},
+	file = {Snapshot:/Users/aakash/Zotero/storage/IBNUGCFY/1429-suddenly-statistics.html:text/html},
+}
+
+@inproceedings{solanki_goingethno_2016,
+	address = {Minneapolis},
+	title = {\#{GoingEthno} in the {Indian} {Bureaucracy}},
+	volume = {2016},
+	copyright = {All rights reserved},
+	url = {https://anthrosource.onlinelibrary.wiley.com/doi/full/10.1111/1559-8918.2016.01107},
+	doi = {10.1111/1559-8918.2016.01107},
+	abstract = {Based on experience of working in the Department of School Education, Government of Haryana on a Management Information System being built to reduce administrative workload on teachers and bureaucrats, this case study describes how ethnography was used to understand and address the problem of technology adoption in a large bureaucracy. Ethnography helped the Department in framing the problem of adoption as one of lack of adequate Digital Literacy within the organization and in developing strategies to address it. Digital Literacy workshops were conducted to improve broader Digital Literacies in the Department, which improved literacy levels by 48\%. For ensuring sustainability of this initiative, the Department instituted a continuous Digital Literacy program, which will support the adoption of multiple technology projects in the future.},
+	urldate = {2019-05-19},
+	booktitle = {Proceedings of {Ethnographic} {Praxis} in {Industry} {Conference}},
+	publisher = {Wiley},
+	author = {Solanki, Aakash and Tewari, Sarvesh},
+	month = nov,
+	year = {2016},
+	keywords = {India, Bureaucracy, South Asia, ICT4D, Management Information System, Organizations, Technology Adoption},
+	pages = {501--521},
+	file = {Snapshot:/Users/aakash/Zotero/storage/XTXGV66X/1559-8918.2016.html:text/html;Solanki_Tewari_2016_#GoingEthno in the Indian Bureaucracy.pdf:/Users/aakash/OneDrive - University of Toronto/misc_references/Solanki_Tewari_2016_#GoingEthno in the Indian Bureaucracy.pdf:application/pdf},
+}
+
+@article{solanki_management_2019,
+	title = {Management of {Performance} and {Performance} of {Management}: {Getting} to {Work} {On} {Time} in the {Indian} bureaucracy},
+	volume = {42},
+	copyright = {All rights reserved},
+	issn = {1479-0270},
+	shorttitle = {Management of {Performance} and {Performance} of {Management}},
+	url = {https://doi.org/10.1080/00856401.2019.1603262},
+	doi = {10.1080/00856401.2019.1603262},
+	number = {3},
+	journal = {South Asia: Journal of South Asian Studies},
+	author = {Solanki, Aakash},
+	year = {2019},
+	keywords = {India, management, state, bureaucracy, Aadhaar, efficiency, surveillance, infrastructure, accountability, new media, audit, fingerprint, transparency, dashboard},
+	annote = {doi: 10.1080/00856401.2019.1603262},
+	file = {Snapshot:/Users/aakash/Zotero/storage/54TIL2KY/00856401.2019.html:text/html;Solanki_2019_Management of Performance and Performance of Management.pdf:/Users/aakash/OneDrive - University of Toronto/misc_references/Solanki_2019_Management of Performance and Performance of Management.pdf:application/pdf;Solanki_2019_Management of Performance and Performance of Management.pdf:/Users/aakash/OneDrive - University of Toronto/misc_references/Solanki_2019_Management of Performance and Performance of Management.pdf:application/pdf},
+}
+
+@incollection{mertia_untidy_2020,
+	address = {Amsterdam},
+	series = {Theory on {Demand}},
+	title = {Untidy {Data}: {Spreadsheet} practices in the {Indian} {Bureaucracy}},
+	copyright = {All rights reserved},
+	isbn = {978-94-92302-71-7},
+	abstract = {Lives of Data maps the historical and emergent dynamics of big data, computing, and society in India. Data infrastructures are now more global than ever before. In much of the world, new sociotechnical possibilities of big data and artificial intelligence are unfolding under the long shadows cast by infra/structural inequalities, colonialism, modernization, and national sovereignty. This book offers critical vantage points for looking at big data and its shadows, as they play out in uneven encounters of machinic and cultural relationalities of data in India’s socio-politically disparate and diverse contexts.},
+	number = {39},
+	booktitle = {Lives of {Data}: {Essays} on {Computational} {Cultures} from {India}},
+	publisher = {Institute of Network Cultures},
+	author = {Solanki, Aakash},
+	editor = {Mertia, Sandeep},
+	year = {2020},
+}
