--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -36,6 +36,7 @@
 }
 
 @article{solanki_management_2019,
+	abbr = {South Asia},
 	title = {Management of {Performance} and {Performance} of {Management}: {Getting} to {Work} {On} {Time} in the {Indian} bureaucracy},
 	volume = {42},
 	copyright = {All rights reserved},
@@ -45,11 +46,15 @@
 	doi = {10.1080/00856401.2019.1603262},
 	number = {3},
 	journal = {South Asia: Journal of South Asian Studies},
+	html = {https://www.tandfonline.com/journals/csas20},
 	author = {Solanki, Aakash},
 	year = {2019},
 	keywords = {India, management, state, bureaucracy, Aadhaar, efficiency, surveillance, infrastructure, accountability, new media, audit, fingerprint, transparency, dashboard},
 	annote = {doi: 10.1080/00856401.2019.1603262},
 	selected={true},
+	google_scholar_id={Y0LLLUMAAAAJ},
+	altmetric = {62436780},
+	annotation={* Example use of superscripts<br>† Aakash Solanki},
 	file = {Snapshot:/Users/aakash/Zotero/storage/54TIL2KY/00856401.2019.html:text/html;Solanki_2019_Management of Performance and Performance of Management.pdf:/Users/aakash/OneDrive - University of Toronto/misc_references/Solanki_2019_Management of Performance and Performance of Management.pdf:application/pdf;Solanki_2019_Management of Performance and Performance of Management.pdf:/Users/aakash/OneDrive - University of Toronto/misc_references/Solanki_2019_Management of Performance and Performance of Management.pdf:application/pdf},
 }
 
