--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -46,6 +46,7 @@
 	doi = {10.1080/00856401.2019.1603262},
 	number = {3},
 	journal = {South Asia: Journal of South Asian Studies},
+	publisher = {Routledge},
 	html = {https://www.tandfonline.com/journals/csas20},
 	author = {Solanki, Aakash},
 	year = {2019},
@@ -54,7 +55,6 @@
 	selected={true},
 	google_scholar_id={Y0LLLUMAAAAJ},
 	altmetric = {62436780},
-	annotation={* Example use of superscripts<br>† Aakash Solanki},
 	file = {Snapshot:/Users/aakash/Zotero/storage/54TIL2KY/00856401.2019.html:text/html;Solanki_2019_Management of Performance and Performance of Management.pdf:/Users/aakash/OneDrive - University of Toronto/misc_references/Solanki_2019_Management of Performance and Performance of Management.pdf:application/pdf;Solanki_2019_Management of Performance and Performance of Management.pdf:/Users/aakash/OneDrive - University of Toronto/misc_references/Solanki_2019_Management of Performance and Performance of Management.pdf:application/pdf},
 }
 
