--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,7 +53,7 @@
 	keywords = {India, management, state, bureaucracy, Aadhaar, efficiency, surveillance, infrastructure, accountability, new media, audit, fingerprint, transparency, dashboard},
 	annote = {doi: 10.1080/00856401.2019.1603262},
 	selected={true},
-	google_scholar_id={Y0LLLUMAAAAJ},
+	google_scholar_id={2osOgNQ5qMEC},
 	altmetric = {62436780},
 	file = {Snapshot:/Users/aakash/Zotero/storage/54TIL2KY/00856401.2019.html:text/html;Solanki_2019_Management of Performance and Performance of Management.pdf:/Users/aakash/OneDrive - University of Toronto/misc_references/Solanki_2019_Management of Performance and Performance of Management.pdf:application/pdf;Solanki_2019_Management of Performance and Performance of Management.pdf:/Users/aakash/OneDrive - University of Toronto/misc_references/Solanki_2019_Management of Performance and Performance of Management.pdf:application/pdf},
 }
