--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,7 +35,7 @@
 	file = {Snapshot:/Users/aakash/Zotero/storage/XTXGV66X/1559-8918.2016.html:text/html;Solanki_Tewari_2016_#GoingEthno in the Indian Bureaucracy.pdf:/Users/aakash/OneDrive - University of Toronto/misc_references/Solanki_Tewari_2016_#GoingEthno in the Indian Bureaucracy.pdf:application/pdf},
 }
 
-@article{solanki_management_2019,
+@article{csas20,
 	abbr = {South Asia},
 	title = {Management of {Performance} and {Performance} of {Management}: {Getting} to {Work} {On} {Time} in the {Indian} bureaucracy},
 	volume = {42},
