--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,7 +35,7 @@
 	file = {Snapshot:/Users/aakash/Zotero/storage/XTXGV66X/1559-8918.2016.html:text/html;Solanki_Tewari_2016_#GoingEthno in the Indian Bureaucracy.pdf:/Users/aakash/OneDrive - University of Toronto/misc_references/Solanki_Tewari_2016_#GoingEthno in the Indian Bureaucracy.pdf:application/pdf},
 }
 
-@article{csas20,
+@article{10.1080/00856401.2019.1603262,
 	abbr = {South Asia},
 	title = {Management of {Performance} and {Performance} of {Management}: {Getting} to {Work} {On} {Time} in the {Indian} bureaucracy},
 	volume = {42},
@@ -55,6 +55,7 @@
 	selected={true},
 	google_scholar_id={2osOgNQ5qMEC},
 	altmetric = {62436780},
+	dimensions = {true},
 	file = {Snapshot:/Users/aakash/Zotero/storage/54TIL2KY/00856401.2019.html:text/html;Solanki_2019_Management of Performance and Performance of Management.pdf:/Users/aakash/OneDrive - University of Toronto/misc_references/Solanki_2019_Management of Performance and Performance of Management.pdf:application/pdf;Solanki_2019_Management of Performance and Performance of Management.pdf:/Users/aakash/OneDrive - University of Toronto/misc_references/Solanki_2019_Management of Performance and Performance of Management.pdf:application/pdf},
 }
 
