--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,6 +45,7 @@
 	url = {https://doi.org/10.1080/00856401.2019.1603262},
 	doi = {10.1080/00856401.2019.1603262},
 	number = {3},
+	pages = {588-605},
 	journal = {South Asia: Journal of South Asian Studies},
 	publisher = {Routledge},
 	html = {https://www.tandfonline.com/journals/csas20},
@@ -68,7 +69,7 @@
 	abstract = {Lives of Data maps the historical and emergent dynamics of big data, computing, and society in India. Data infrastructures are now more global than ever before. In much of the world, new sociotechnical possibilities of big data and artificial intelligence are unfolding under the long shadows cast by infra/structural inequalities, colonialism, modernization, and national sovereignty. This book offers critical vantage points for looking at big data and its shadows, as they play out in uneven encounters of machinic and cultural relationalities of data in India’s socio-politically disparate and diverse contexts.},
 	number = {39},
 	booktitle = {Lives of {Data}: {Essays} on {Computational} {Cultures} from {India}},
-	url = {https://networkcultures.org/blog/publication/lives-of-data-essays-on-computational-cultures-from-india/},
+	html = {https://networkcultures.org/blog/publication/lives-of-data-essays-on-computational-cultures-from-india/},
 	publisher = {Institute of Network Cultures},
 	author = {Solanki, Aakash},
 	editor = {Mertia, Sandeep},
