--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,11 +3,12 @@
 
 @string{aps = {American Physical Society,}}
 
-@misc{solanki_suddenly_2018,
+@article{solanki_suddenly_2018,
+	abbr = {Blog Post},
 	title = {Suddenly, {Statistics}?},
 	copyright = {All rights reserved},
 	shorttitle = {Suddenly, {Statistics}?},
-	url = {https://culanth.org/fieldsights/suddenly-statistics},
+	html = {https://culanth.org/fieldsights/suddenly-statistics},
 	language = {en},
 	urldate = {2018-05-18},
 	journal = {Cultural Anthropology},
@@ -17,6 +18,7 @@
 }
 
 @inproceedings{solanki_goingethno_2016,
+	abbr = {Proceedings},
 	address = {Minneapolis},
 	title = {\#{GoingEthno} in the {Indian} {Bureaucracy}},
 	volume = {2016},
@@ -36,7 +38,7 @@
 }
 
 @article{10.1080/00856401.2019.1603262,
-	abbr = {South Asia},
+	abbr = {Journal Article},
 	title = {Management of {Performance} and {Performance} of {Management}: {Getting} to {Work} {On} {Time} in the {Indian} bureaucracy},
 	volume = {42},
 	copyright = {All rights reserved},
@@ -61,6 +63,7 @@
 }
 
 @incollection{mertia_untidy_2020,
+	abbr = {Book Chapter},
 	address = {Amsterdam},
 	series = {Theory on {Demand}},
 	title = {Untidy {Data}: {Spreadsheet} practices in the {Indian} {Bureaucracy}},
