--- a/_posts/2020-09-28-twitter.md
+++ b/_posts/2020-09-28-twitter.md
@@ -7,18 +7,22 @@ tags: formatting
 categories: sample-posts external-services
 ---
 
-A sample blog page that demonstrates the inclusion of Tweets/Timelines/etc.
+A sample blog page that demonstrates how to reference Tweets and timelines without relying on live embeds.
 
 # Tweet
 
-An example of displaying a tweet:
-{% twitter https://twitter.com/rubygems/status/518821243320287232 %}
+An example of referencing a tweet with a static quotation:
+
+> "If you like it then you shoulda put a gem on it." — [@rubygems](https://twitter.com/rubygems/status/518821243320287232)
 
 # Timeline
 
-An example of pulling from a timeline:
-{% twitter https://twitter.com/jekyllrb maxwidth=500 limit=3 %}
+An example of summarizing a timeline:
+
+- [@jekyllrb](https://twitter.com/jekyllrb) — official updates about the static site generator.
+- [@jekyllrbhelp](https://twitter.com/jekyllrbhelp) — community-maintained support tips.
+- [#jekyllrb](https://twitter.com/hashtag/jekyllrb) — contributions from the wider community.
 
 # Additional Details
 
-For more details on using the plugin visit: [jekyll-twitter-plugin](https://github.com/rob-murray/jekyll-twitter-plugin)
+For more details on the original embed plugin visit: [jekyll-twitter-plugin](https://github.com/rob-murray/jekyll-twitter-plugin). Static references such as the ones above avoid runtime calls to the Twitter API during builds.
